<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ztkx.formulariocontacto.MainActivity"
    android:orientation="vertical">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_fecha"
        android:textSize="@dimen/titulos"
        android:layout_gravity="center_horizontal"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_gravity="center_horizontal"
        android:maxDate="2020"
        android:minDate="1900"
        >
    </DatePicker>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_telefono"
        />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_descripcion"
        />

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="confirmarContacto"
            android:text="@string/btn_next"
            android:theme="@style/BtnStyle"
            />
    </android.support.v7.widget.ButtonBarLayout>



</LinearLayout>



